--- a/now.json
+++ b/now.json
@@ -1,6 +1,11 @@
 {
     "version": 2,
     "name": "buddies tech",
+    "builds": [{
+        "src": "bt/wsgi.py",
+        "use": "@ardnt/now-python-wsgi",
+        "config": { "maxLambdaSize": "100mb" }
+    }],
         "routes": [{
         "src": "/(.*)",
         "dest": "bt/wsgi.py"
