--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "manage.py",
   "scripts": {
-    "test": "python3 manage.py runserver"
+    "test": "python3 manage.py"
   },
   "author": "Naveen Nk",
   "license": "ISC",
